# House-Prices---Advanced-Regression-Techniques

./: .gitignore  ADVANCED_TECHNIQUES_TOP15.md  ANALYSIS_SUMMARY.md  AUTO_OPEN_FEATURE.md  COMPLETE_SOLUTION_SUMMARY.md  DEPLOYMENT_SUCCESS.md  EXPECTED_RESULTS.md  FILE_STRUCTURE.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HOUSE_PRICES_OPTIMIZATIONS.md  HOUSE_PRICES_README.md  IMPLEMENTATION_SUMMARY.md  NOTEBOOK_UPDATES_SUMMARY.md  OLLAMA_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_IMPLEMENTATION_TOP15.md  QUICK_START_GUIDE.md  QUICK_TEST.sh  README.md  START_HERE.md  STATUS.md  TESTING_GUIDE.md  TEST_RESULTS.md  bulgarian_analysis.py  bulgarian_complete_analysis.py  bulgarian_complete_financial_analysis_report.md  bulgarian_detailed_analysis.py  bulgarian_llm_analysis.py  bulgarian_llm_financial_analysis_report.md  bulgarian_ratio_analysis.py  bulgarian_smart_analysis.py  config.yaml  config_bulgarian.yaml  house_prices_advanced_top15.py  house_prices_complete.py  house_prices_kaggle_notebook.ipynb  pyproject.toml  requirements.txt  (+1 more)
data/: create_sample_excel.py  generate_fagl_csv.py  generate_sample_data.py  sample_mapping.csv
fin_review/: __init__.py  bulgarian_cli.py  cli.py  config.py
fin_review/analytics/: __init__.py  aging.py  anomalies.py  forecasting.py  intelligent_insights.py  kpis.py  ratio_analyzer.py  trends.py
fin_review/dashboard/: __init__.py  app.py
fin_review/llm/: __init__.py  ollama_analyzer.py
results/: README.md
tests/: __init__.py  conftest.py  test_analytics.py  test_loaders.py  test_nlp.py  test_transformers.py
(+43 files in other folders)
